Migrated to psql database

--- a/views/message.ejs
+++ b/views/message.ejs
@@ -4,8 +4,8 @@
 <body>
   <header><%- include('navbar', { links }) %></header>
   <div>
-    <p><%= msg.text %></p>
-    <p><%= msg.user %></p>
-    <p><%= msg.added %></p>
+    <p><%= msg.name %></p>
+    <p><%= msg.message %></p>
+    <p><%= msg.date %></p>
   </div>
 </body>
