--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,9 @@
     <% messages.forEach(msg => { %>
     <div>
       <p><%= msg.id %></p>
-      <p><%= msg.text %></p>
-      <p><%= msg.user %></p>
-      <p><%= msg.added %></p>
+      <p><%= msg.name %></p>
+      <p><%= msg.message %></p>
+      <p><%= msg.date %></p>
       <a href="/<%= msg.id %>"><button>Open</button></a>
     </div>
     <% }) %>
